# escapi

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  escapi.sln
blitzmax/: demo.bmx  readme.txt
common/: escapi.cpp  escapi.h
enum/: enum.vcxproj  main.cpp
enumprops/: enumprops.vcxproj  main.cpp
escapi_dll/: cameraeventshandler.cpp  cameraeventshandler.h  capture.cpp  capture.h  choosedeviceparam.h  conversion.cpp  conversion.h  escapi_dll.cpp  escapi_dll.vcxproj  interface.cpp  scopedrelease.h  videobufferlock.cpp  videobufferlock.h
examples/: simplest.rs
multicap/: main.cpp  multicap.vcxproj
ogl/: main.cpp  ogl.vcxproj
propgui/: imgui.ini  imgui_impl_sdl.cpp  main.cpp  propgui.vcxproj
purebasic/: demo.pb  escapi.pb  readme.txt
python/: camera.py
simplest/: main.cpp  simplest.vcxproj
src/: lib.rs
