[package]
name = "escapi"
version = "3.1.0"
authors = [
    "Daniel Abramov <dabramov@snapview.de>",
    "Oliver Schneider <git-spam-1984941651981@oli-obk.de>",
    "Jari Komppa <nospam@nospam.nospam>"
]
build = "build.rs"
repository = "https://github.com/jarikomppa/escapi"
description = "Extremely Simple Capture API (ESCAPI) - simple webcam API for windows"
license-file = "UNLICENSE"

[dependencies]
kernel32-sys = "0.2.2"
libc = "0.2.10"

[dev-dependencies]
image = "0.13"

[build-dependencies]
gcc = "0.3"
